force-app/main/default/objects/CampaignMemberStatus__c/CampaignMemberStatus__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines Campaign Member Status values to create automatically.</description>
    <label>AAuto Kampaign Member Status</label>
</CustomObject>