force-app/main/default/objects/CampaignMemberStatus__c/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <description>The label of the status to automatically apply to new campaigns.</description>
    <inlineHelpText>The label of the status to automatically apply to new campaigns.</inlineHelpText>
    <label>Campaign Member Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>