force-app/main/default/objects/CampaignMemberStatus__c/fields/Campaign_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Record_Type_Name__c</fullName>
    <description>Which campaign record types should this apply to?</description>
    <inlineHelpText>Which campaign record types should this apply to?</inlineHelpText>
    <label>Campaign Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>