force-app/main/default/objects/CampaignMemberStatus__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>Which campaign types should get these statuses?</description>
    <inlineHelpText>Which campaign types should get these statuses?</inlineHelpText>
    <label>Campaign Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>