force-app/main/default/objects/CampaignMemberStatus__c/fields/HasResponded__c.field-meta.xml
<CustomField>
    <fullName>HasResponded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the automatically created campaign member status value be a responded status?</description>
    <inlineHelpText>Should the automatically created campaign member status value be a responded status?</inlineHelpText>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>