force-app/main/default/objects/CampaignMemberStatus__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the campaign member status be the default one. Only create one of these per combination of Campaign Type and Record Type.</description>
    <inlineHelpText>Should the campaign member status be the default one. Only create one of these per combination of Campaign Type and Record Type.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>