force-app/main/default/objects/CampaignMemberStatus__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>The sort order of campaign member status values. Must be a number 3 or greater.</description>
    <inlineHelpText>The sort order of campaign member status values. Must be a number 3 or greater.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>