force-app/main/default/objects/CampaignMemberStatus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsDefault__c</columns>
    <columns>HasResponded__c</columns>
    <columns>SortOrder__c</columns>
    <columns>Campaign_Member_Status__c</columns>
    <columns>Campaign_Record_Type_Name__c</columns>
    <columns>Campaign_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>